# vibe2d

./: .gitignore  AGENTS.md  Cargo.toml  README.md  milestone.md
.github/workflows/: ci.yml  playthrough-cleanup.yml  playthrough-publish.yml  playthrough-record.yml  playthrough-verify.yml  playthrough.yml
crates/vibe2d/: Cargo.toml
crates/vibe2d/src/: config.rs  context.rs  game.rs  lib.rs  screen.rs  vdp_web.rs
crates/vibe_aoi/: Cargo.toml
crates/vibe_aoi/src/: bruteforce.rs  grid.rs  lib.rs  observer.rs  raycast.rs  shape.rs  world.rs
crates/vibe_aoi/tests/: consistency.rs
crates/vibe_asset/: Cargo.toml
crates/vibe_asset/src/: lib.rs
crates/vibe_audio/: Cargo.toml
crates/vibe_audio/src/: lib.rs
crates/vibe_debug/: Cargo.toml
crates/vibe_debug/src/: lib.rs  protocol.rs  server.rs
crates/vibe_input/: Cargo.toml
crates/vibe_input/src/: lib.rs
crates/vibe_physics/: Cargo.toml
crates/vibe_physics/src/: lib.rs
crates/vibe_platform/: Cargo.toml
crates/vibe_platform/src/: desktop.rs  lib.rs
crates/vibe_render/: Cargo.toml
crates/vibe_render/src/: font.rs  lib.rs  procedural.rs  renderer.rs  sprite.wgsl  texture.rs
crates/vibe_test/: Cargo.toml
crates/vibe_test/src/: client.rs  harness.rs  lib.rs  recorder.rs
crates/vibe_ui/: Cargo.toml
crates/vibe_ui/src/: context.rs  id.rs  layout.rs  lib.rs  response.rs  state.rs  style.rs  vdp.rs
docs/: aoi.md  api.md  engine_quirks.md  ui.md  wasm.md
docs/game_demo/tactics-demo/: plan.md
docs/plans/: headless_tests.md
examples/aoi-demo/: Cargo.toml  game.yaml
examples/aoi-demo/src/: main.rs
examples/aoi-demo/tests/: playthrough.rs  vdp_aoi.rs
examples/flappy-bird/: Cargo.toml  README.md  game.yaml
examples/flappy-bird/src/: main.rs
examples/flappy-bird/tests/: autopilot_max_score.py  playthrough.rs  vdp_full_test.py  vdp_rpc.py
examples/mari0/: Cargo.toml  game.yaml
examples/mari0/src/: main.rs
examples/mari0/tests/: autopilot_max_score.py  playthrough.rs
examples/tactics-demo/: Cargo.toml  README.md  game.yaml
examples/tactics-demo/src/: ai.rs  combat.rs  input.rs  main.rs  map.rs  model.rs  render.rs  vdp.rs
examples/tactics-demo/tests/: vdp_tactics.rs
examples/tetris/: Cargo.toml  README.md  game.yaml  gen_assets.py
examples/tetris/src/: main.rs
examples/tetris/tests/: autopilot_max_score.py  playthrough.rs  vdp_full_test.py
examples/ui/: Cargo.toml  game.yaml
examples/ui/src/: main.rs
examples/ui/tests/: playthrough.rs  vdp_ui.rs
skills/: vdp.md
tools/vibe-cli/: Cargo.toml
tools/vibe-cli/src/: main.rs  vdp_relay.rs
