[package]
name = "vibe_debug"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util = "0.3"
anyhow.workspace = true
tracing.workspace = true
