[package]
name = "vibe_test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test helpers for driving Vibe2D games over VDP"

# This crate is intentionally small and dependency-light: it's linked as
# a dev-dependency from game crates that want to write Rust integration
# tests against a running game instance.

[features]
default = ["vdp"]
# The `vdp` feature enables the VDP WebSocket client + game process
# harness. It's on by default because that's the primary use case, and
# matches the `vdp` feature name used by the engine and game crates —
# a game that disables `vdp` also has no reason to pull in these tests.
vdp = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "process", "io-util"] }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
