[package]
name = "vibe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
futures-util = "0.3"
